problem 1 data import and data cleaning

--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -1,23 +1,13 @@
----
-title: "P8105 Homework 2"
-output: github_document
----
-Name: Xi Peng   UNI: xp2213    Date: 09.21.2024
+P8105 Homework 2
+================
 
-```{r setup, echo=FALSE, message=FALSE}
-library(tidyverse)
-library(readxl)
-library(haven)
-library(tidyr)
-```
-
+Name: Xi Peng UNI: xp2213 Date: 09.21.2024
 
 # Problem 1 NYC Transit Data
 
 ## Section 1 Data Import
 
-```{r, message=FALSE}
-
+``` r
 NYCtransit_df =
     read_csv("data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv", na = c("NA", "", ".", " ")) |>
   janitor::clean_names() |> 
@@ -30,6 +20,4 @@ NYCtransit_df =
     )
   ) |> 
   relocate(line, station_name, station_latitude, station_longitude, routes_served, entry, vending, entrance_type, ada)
-
 ```
-
