--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -21,3 +21,14 @@ NYCtransit_df =
   ) |> 
   relocate(line, station_name, station_latitude, station_longitude, routes_served, entry, vending, entrance_type, ada)
 ```
+
+The NYC Transit Subway Entrance and Exit dataset contains information
+about different subway station’s entrances and exits. Other detailed
+information, such as which subway lines stop at which station and their
+geographic coordinates, ADA compliance, and detailed information about
+the entrances, staffing status, etc.In this step, I cleaned the dataset
+by only keep the required variables: line, station_name,
+station_latitude, station_longitude, routes_served, entry, vending,
+entrance_type, ada. The variable “entry” also converted to logical.
+After the cleaning step, the tidy dataset contains 1868 rows and 9
+columns.
