--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -32,3 +32,27 @@ station_latitude, station_longitude, routes_served, entry, vending,
 entrance_type, ada. The variable “entry” also converted to logical.
 After the cleaning step, the tidy dataset contains 1868 rows and 9
 columns.
+
+``` r
+distinct_station =
+  NYCtransit_df |> distinct(station_name,line)
+
+ADA_compliant_station =
+  NYCtransit_df |> 
+  filter(ada == TRUE) |> 
+  distinct(station_name,line)
+
+Entry_without_vending = 
+  NYCtransit_df |> 
+  filter(vending == "NO", entry == "TRUE") |> 
+  distinct(station_name,line)
+
+numEntry_without_vending = nrow(Entry_without_vending)
+numdistinct_station = nrow(distinct_station)
+
+prop_without_vending = numEntry_without_vending/numdistinct_station
+```
+
+In this dataset, there are 465 distinct stations and 84 stations are ADA
+compliant. The proportion of station entrances / exits without vending
+allow entrance is 0.0924731
