--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -33,6 +33,8 @@ entrance_type, ada. The variable “entry” also converted to logical.
 After the cleaning step, the tidy dataset contains 1868 rows and 9
 columns.
 
+## Section 2
+
 ``` r
 distinct_station =
   NYCtransit_df |> distinct(station_name,line)
@@ -55,4 +57,21 @@ prop_without_vending = numEntry_without_vending/numdistinct_station
 
 In this dataset, there are 465 distinct stations and 84 stations are ADA
 compliant. The proportion of station entrances / exits without vending
-allow entrance is 0.0924731
+allow entrance is 0.0924731.
+
+## Section 3
+
+``` r
+station_served_A = NYCtransit_df |> 
+  filter(grepl("A", routes_served)) |> 
+  distinct(station_name, line) |> 
+  nrow()
+  
+ADA_compliant_A = NYCtransit_df |> 
+   filter(grepl("A", routes_served), ada == TRUE) |> 
+  distinct(station_name,line) |> 
+  nrow()
+```
+
+There are 60 distinct stations serve the A train and 17 of the stations
+that serve the A train are ADA compliant.
