--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -75,3 +75,17 @@ ADA_compliant_A = NYCtransit_df |>
 
 There are 60 distinct stations serve the A train and 17 of the stations
 that serve the A train are ADA compliant.
+
+# Problem 2 Mr.Trash Wheel dataset
+
+## Section 1 Data Import
+
+``` r
+Trash_wheel = 
+  read_excel("Data/202309 Trash Wheel Collection Data.xlsx") |> 
+  janitor::clean_names()
+```
+
+    ## New names:
+    ## • `` -> `...15`
+    ## • `` -> `...16`
