Problem 2 Section 1 Cleaning of the "Mr. Trash Wheel" Sheet

--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -68,7 +68,7 @@ station_served_A = NYCtransit_df |>
   nrow()
   
 ADA_compliant_A = NYCtransit_df |> 
-   filter(grepl("A", routes_served), ada == TRUE) |> 
+  filter(grepl("A", routes_served), ada == TRUE) |> 
   distinct(station_name,line) |> 
   nrow()
 ```
@@ -78,14 +78,24 @@ that serve the A train are ADA compliant.
 
 # Problem 2 Mr.Trash Wheel dataset
 
-## Section 1 Data Import
+## Section 1 Data Import & Cleaning of the “Mr. Trash Wheel” Sheet
 
 ``` r
 Trash_wheel = 
-  read_excel("Data/202409 Trash Wheel Collection Data.xlsx") |> 
-  janitor::clean_names()
+  read_excel("Data/202409 Trash Wheel Collection Data.xlsx", sheet = "Mr. Trash Wheel", 
+  col_types = c("numeric","text","text","date","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","skip","skip")) |> 
+  janitor::clean_names() |> 
+  drop_na(dumpster) |> 
+  mutate(
+    sports_balls = as.integer(round(sports_balls))
+  )
 ```
 
-    ## New names:
-    ## • `` -> `...15`
-    ## • `` -> `...16`
+In section 1, the original dataset was imported, and the “Mr. Trash
+Wheel” sheet was selected. After examining the content of the original
+excel dataset, I identified columns labeled “x15” and “x16” as non-data
+columns containing only NAs. Therefore, these two columns were removed.
+Additionally, any rows that did not correspond to a specific dumpster
+were filtered out from the dataset. Lastly, the values in the
+“sports_balls” column were rounded to nearest integer and converted to
+integer variable.
