--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -81,7 +81,7 @@ that serve the A train are ADA compliant.
 ## Section 1 Data Import & Cleaning of the “Mr. Trash Wheel” Sheet
 
 ``` r
-Trash_wheel = 
+Mr_wheel = 
   read_excel("Data/202409 Trash Wheel Collection Data.xlsx", sheet = "Mr. Trash Wheel", 
   col_types = c("numeric","text","text","date","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","skip","skip")) |> 
   janitor::clean_names() |> 
@@ -99,3 +99,29 @@ Additionally, any rows that did not correspond to a specific dumpster
 were filtered out from the dataset. Lastly, the values in the
 “sports_balls” column were rounded to nearest integer and converted to
 integer variable.
+
+## Section 2 Cleaning of the “Professor Trash Wheel” Sheet and “Gwynnda Trash Wheel” Sheet
+
+``` r
+Prof_wheel = 
+  read_excel("Data/202409 Trash Wheel Collection Data.xlsx", sheet = "Professor Trash Wheel") |> 
+  janitor::clean_names() |> 
+  drop_na(dumpster) 
+
+Gwynnda_wheel = 
+  read_excel("Data/202409 Trash Wheel Collection Data.xlsx", sheet = "Gwynnda Trash Wheel") |> 
+  janitor::clean_names() |> 
+  drop_na(dumpster)
+```
+
+In section 2, similar steps were taken to clean the “Professor Trash
+Wheel” sheet and “Gwynnda Trash Wheel” sheet. After importing the
+original datasets of these two sheets, their contents were examined to
+ensure that no non-data entries were present. Also, any rows that did
+not correspond to a specific dumpster were filtered out from the
+datasets.
+
+In all three datasets, columns that are not considered non-data but
+contain many NA values are kept. Similarly, rows that lack useful
+information are also retained as long as they include dumpster-specific
+data.
