Problem 2 Combination of Train Wheel Sheets

--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -1,11 +1,11 @@
 P8105 Homework 2
 ================
 
-Name: Xi Peng UNI: xp2213 Date: 09.21.2024
+Name: Xi Peng UNI: xp2213 Date: 10.02.2024
 
 # Problem 1 NYC Transit Data
 
-## Section 1 Data Import
+## Section 1: Data Import
 
 ``` r
 NYCtransit_df =
@@ -76,9 +76,9 @@ ADA_compliant_A = NYCtransit_df |>
 There are 60 distinct stations serve the A train and 17 of the stations
 that serve the A train are ADA compliant.
 
-# Problem 2 Mr.Trash Wheel dataset
+# Problem 2 Trash Wheel Dataset
 
-## Section 1 Data Import & Cleaning of the “Mr. Trash Wheel” Sheet
+## Section 1: Data Import & Cleaning of the “Mr. Trash Wheel” Sheet
 
 ``` r
 Mr_wheel = 
@@ -100,7 +100,7 @@ were filtered out from the dataset. Lastly, the values in the
 “sports_balls” column were rounded to nearest integer and converted to
 integer variable.
 
-## Section 2 Cleaning of the “Professor Trash Wheel” Sheet and “Gwynnda Trash Wheel” Sheet
+## Section 2: Cleaning of the “Professor Trash Wheel” Sheet and “Gwynnda Trash Wheel” Sheet
 
 ``` r
 Prof_wheel = 
@@ -125,3 +125,31 @@ In all three datasets, columns that are not considered non-data but
 contain many NA values are kept. Similarly, rows that lack useful
 information are also retained as long as they include dumpster-specific
 data.
+
+## Section 3: Combination of “Mr. Trash Wheel”, “Professor Trash Wheel”, and “Gwynnda Trash Wheel” sheets
+
+``` r
+Mr_wheel_com = Mr_wheel |> mutate(trash_wheel_device = "Mr.", year = as.numeric(year))
+Prof_wheel_com = Prof_wheel |> mutate(trash_wheel_device = "Professor")
+Gwynnda_wheel_com = Gwynnda_wheel |> mutate(trash_wheel_device = "Gwynnda")
+
+trash_wheel_df = 
+  bind_rows(Mr_wheel_com, Prof_wheel_com, Gwynnda_wheel_com) |> 
+  janitor::clean_names() |> 
+  relocate(trash_wheel_device)
+```
+
+In section 3, the three sheets were combined. The combined dataset
+contains a total of 1033 observations and 15 columns. The variables
+included in this dataset are: trash_wheel_device, dumpster, month, year,
+date, weight_tons, volume_cubic_yards, plastic_bottles, polystyrene,
+cigarette_butts, glass_bottles, plastic_bags, wrappers, sports_balls,
+homes_powered. An additional column,“trash_wheel_device”, was created
+based on the Trash Wheel Website introduction to denote which specific
+trash wheel device each observation belongs to. Among these varaibles,
+both the “dumpster” variable, which represents the dumpster number, and
+the “trash_wheel_device” variable are essential indicators provide
+timely and effective access to critical and detailed information for
+each observation. Therefore, I relocated the “trash_wheel_device” to a
+forward position, specifically to the first column in the dataset, to
+facilitate easier information extraction.
