--- a/P8105 HW2.Rmd
+++ b/P8105 HW2.Rmd
@@ -2,7 +2,7 @@
 title: "P8105 Homework 2"
 output: github_document
 ---
-Name: Xi Peng   UNI: xp2213    Date: 09.21.2024
+Name: Xi Peng   UNI: xp2213    Date: 10.02.2024
 
 ```{r setup, echo=FALSE, message=FALSE}
 library(tidyverse)
@@ -15,7 +15,7 @@ library(dplyr)
 
 # Problem 1 NYC Transit Data
 
-## Section 1 Data Import
+## Section 1: Data Import
 
 ```{r, message=FALSE}
 
@@ -82,9 +82,9 @@ There are `r station_served_A` distinct stations serve the A train and `r ADA_co
 
 
 
-# Problem 2 Mr.Trash Wheel dataset
+# Problem 2 Trash Wheel Dataset
 
-## Section 1 Data Import & Cleaning of the "Mr. Trash Wheel" Sheet
+## Section 1: Data Import & Cleaning of the "Mr. Trash Wheel" Sheet
 
 ```{r}
 
@@ -102,7 +102,7 @@ Mr_wheel =
 In section 1, the original dataset was imported, and the "Mr. Trash Wheel" sheet was selected. After examining the content of the original excel dataset, I identified columns labeled "x15" and "x16" as non-data columns containing only NAs. Therefore, these two columns were removed. Additionally, any rows that did not correspond to a specific dumpster were filtered out from the dataset. Lastly, the values in the "sports_balls" column were rounded to nearest integer and converted to integer variable.
 
 
-## Section 2 Cleaning of the "Professor Trash Wheel" Sheet and "Gwynnda Trash Wheel" Sheet
+## Section 2: Cleaning of the "Professor Trash Wheel" Sheet and "Gwynnda Trash Wheel" Sheet
 
 ```{r}
 
@@ -123,4 +123,20 @@ In section 2, similar steps were taken to clean the "Professor Trash Wheel" shee
 In all three datasets, columns that are not considered non-data but contain many NA values are kept. Similarly, rows that lack useful information are also retained as long as they include dumpster-specific data.
 
 
+## Section 3: Combination of "Mr. Trash Wheel", "Professor Trash Wheel", and "Gwynnda Trash Wheel" sheets
+
+```{r}
+
+Mr_wheel_com = Mr_wheel |> mutate(trash_wheel_device = "Mr.", year = as.numeric(year))
+Prof_wheel_com = Prof_wheel |> mutate(trash_wheel_device = "Professor")
+Gwynnda_wheel_com = Gwynnda_wheel |> mutate(trash_wheel_device = "Gwynnda")
+
+trash_wheel_df = 
+  bind_rows(Mr_wheel_com, Prof_wheel_com, Gwynnda_wheel_com) |> 
+  janitor::clean_names() |> 
+  relocate(trash_wheel_device)
+
+```
+
+In section 3, the three sheets were combined. The combined dataset contains a total of `r nrow(trash_wheel_df)` observations and `r ncol(trash_wheel_df)` columns. The variables included in this dataset are: `r names(trash_wheel_df)`. An additional column,"trash_wheel_device", was created based on the Trash Wheel Website introduction to denote which specific trash wheel device each observation belongs to. Among these varaibles, both the "dumpster" variable, which represents the dumpster number, and the "trash_wheel_device" variable are essential indicators provide timely and effective access to critical and detailed information for each observation. Therefore, I relocated the "trash_wheel_device" to a forward position, specifically to the first column in the dataset, to facilitate easier information extraction.
 
