Initial checking of Problem 3 datasets

--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -153,3 +153,36 @@ timely and effective access to critical and detailed information for
 each observation. Therefore, I relocated the “trash_wheel_device” to a
 forward position, specifically to the first column in the dataset, to
 facilitate easier information extraction.
+
+# Problem 3 Great British Bake Off Dataset
+
+## Section 1: Data import and Creation of a single, well-organized dataset
+
+``` r
+bakers_df =
+  read_csv("data/gbb_datasets/bakers.csv", na = c("NA", "", ".", " ")) |> 
+  janitor::clean_names() |> 
+  mutate(
+    first_name = word(baker_name, 1),
+    last_name = word(baker_name, -1)
+  ) |> 
+  relocate(first_name, last_name) |> 
+  select(-baker_name)
+
+bakes_df =
+  read_csv("data/gbb_datasets/bakes.csv", na = c("NA", "", ".", " ")) |> 
+  janitor::clean_names()
+
+results_df =
+  read_csv("data/gbb_datasets/results.csv", na = c("NA", "", ".", " ")) |> 
+  janitor::clean_names()
+```
+
+In this section, the datasets were imported, and I reviewed the contents
+of each dataset. I noticed that the bakers’ names in the baker.csv file
+were full names, whereas the other datasets only contained the bakers’
+first names. To ensure consistency across the datasets, I split the full
+names in baker.csv into separate columns for first and last names. Then
+I removed the baker_name variable to avoid redundant information after
+verifying the consistency between the first_name and last_name columns
+and the original baker_name colomn.
