--- a/P8105 HW2.Rmd
+++ b/P8105 HW2.Rmd
@@ -140,3 +140,32 @@ trash_wheel_df =
 
 In section 3, the three sheets were combined. The combined dataset contains a total of `r nrow(trash_wheel_df)` observations and `r ncol(trash_wheel_df)` columns. The variables included in this dataset are: `r names(trash_wheel_df)`. An additional column,"trash_wheel_device", was created based on the Trash Wheel Website introduction to denote which specific trash wheel device each observation belongs to. Among these varaibles, both the "dumpster" variable, which represents the dumpster number, and the "trash_wheel_device" variable are essential indicators provide timely and effective access to critical and detailed information for each observation. Therefore, I relocated the "trash_wheel_device" to a forward position, specifically to the first column in the dataset, to facilitate easier information extraction.
 
+
+
+# Problem 3 Great British Bake Off Dataset
+
+## Section 1: Data import and Creation of a single, well-organized dataset
+
+```{r, message=FALSE}
+
+bakers_df =
+  read_csv("data/gbb_datasets/bakers.csv", na = c("NA", "", ".", " ")) |> 
+  janitor::clean_names() |> 
+  mutate(
+    first_name = word(baker_name, 1),
+    last_name = word(baker_name, -1)
+  ) |> 
+  relocate(first_name, last_name) |> 
+  select(-baker_name)
+
+bakes_df =
+  read_csv("data/gbb_datasets/bakes.csv", na = c("NA", "", ".", " ")) |> 
+  janitor::clean_names()
+
+results_df =
+  read_csv("data/gbb_datasets/results.csv", na = c("NA", "", ".", " ")) |> 
+  janitor::clean_names()
+
+```
+
+In this section, the datasets were imported, and I reviewed the contents of each dataset. I noticed that the bakers' names in the baker.csv file were full names, whereas the other datasets only contained the bakers' first names. To ensure consistency across the datasets, I split the full names in baker.csv into separate columns for first and last names. Then I removed the baker_name variable to avoid redundant information after verifying the consistency between the first_name and last_name columns and the original baker_name colomn.
