--- a/P8105 HW2.Rmd
+++ b/P8105 HW2.Rmd
@@ -90,7 +90,7 @@ There are `r station_served_A` distinct stations serve the A train and `r ADA_co
 
 Mr_wheel = 
   read_excel("Data/202409 Trash Wheel Collection Data.xlsx", sheet = "Mr. Trash Wheel", 
-  col_types = c("numeric","text","text","date","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","skip","skip")) |> 
+  col_types = c("numeric","text","text","date","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","skip","skip"), skip = 1) |> 
   janitor::clean_names() |> 
   drop_na(dumpster) |> 
   mutate(
@@ -136,9 +136,21 @@ trash_wheel_df =
   janitor::clean_names() |> 
   relocate(trash_wheel_device)
 
+total_weight_trash_Prof = trash_wheel_df |> 
+  filter(trash_wheel_device == "Professor") |> 
+  drop_na(weight_tons) |> 
+  pull(weight_tons) |> 
+  sum()
+
+total_cigarette_Gwynnda = trash_wheel_df |> 
+  filter(trash_wheel_device == "Gwynnda", month == "June", year == 2022 ) |> 
+  drop_na(cigarette_butts) |> 
+  pull(cigarette_butts) |> 
+  sum()
+
 ```
 
-In section 3, the three sheets were combined. The combined dataset contains a total of `r nrow(trash_wheel_df)` observations and `r ncol(trash_wheel_df)` columns. The variables included in this dataset are: `r names(trash_wheel_df)`. An additional column,"trash_wheel_device", was created based on the Trash Wheel Website introduction to denote which specific trash wheel device each observation belongs to. Among these varaibles, both the "dumpster" variable, which represents the dumpster number, and the "trash_wheel_device" variable are essential indicators provide timely and effective access to critical and detailed information for each observation. Therefore, I relocated the "trash_wheel_device" to a forward position, specifically to the first column in the dataset, to facilitate easier information extraction.
+In section 3, the three sheets were combined. The combined dataset contains a total of `r nrow(trash_wheel_df)` observations and `r ncol(trash_wheel_df)` columns. The variables included in this dataset are: `r names(trash_wheel_df)`. An additional column,"trash_wheel_device", was created based on the Trash Wheel Website introduction to denote which specific trash wheel device each observation belongs to. Among these varaibles, both the "dumpster" variable, which represents the dumpster number, and the "trash_wheel_device" variable are essential indicators provide timely and effective access to critical and detailed information for each observation. Therefore, I relocated the "trash_wheel_device" to a forward position, specifically to the first column in the dataset, to facilitate easier information extraction.Based on provided data, the total weight of trash collected by Professor Trash Wheel was `r total_weight_trash_Prof` tons, and the total number of cigarette butts collected by Gwynnda in June of 2022 was `r total_cigarette_Gwynnda`.
 
 
 
@@ -151,21 +163,51 @@ In section 3, the three sheets were combined. The combined dataset contains a to
 bakers_df =
   read_csv("data/gbb_datasets/bakers.csv", na = c("NA", "", ".", " ")) |> 
   janitor::clean_names() |> 
-  mutate(
-    first_name = word(baker_name, 1),
-    last_name = word(baker_name, -1)
-  ) |> 
-  relocate(first_name, last_name) |> 
-  select(-baker_name)
+  separate(baker_name, into = c("baker", "last_name"), sep = "")
 
 bakes_df =
   read_csv("data/gbb_datasets/bakes.csv", na = c("NA", "", ".", " ")) |> 
-  janitor::clean_names()
+  janitor::clean_names() |> 
+  mutate(
+    series = as.numeric(series)
+  )
 
 results_df =
-  read_csv("data/gbb_datasets/results.csv", na = c("NA", "", ".", " ")) |> 
-  janitor::clean_names()
+  read_csv("data/gbb_datasets/results.csv", na = c("NA", "", ".", " "), skip = 2) |> 
+  janitor::clean_names() |> 
+  mutate(
+    result = case_match(
+      result,
+      "IN" ~ "stayed in",
+      "OUT" ~ "Eliminated", 
+      "STAR BAKER" ~ "Star Baker",
+      "WINNER" ~ "Series Winner",
+      "Runner-up" ~ "Series Runner up",
+      "WD" ~ "withdrew"
+    )
+  )
 
 ```
 
-In this section, the datasets were imported, and I reviewed the contents of each dataset. I noticed that the bakers' names in the baker.csv file were full names, whereas the other datasets only contained the bakers' first names. To ensure consistency across the datasets, I split the full names in baker.csv into separate columns for first and last names. Then I removed the baker_name variable to avoid redundant information after verifying the consistency between the first_name and last_name columns and the original baker_name colomn.
+### check for completeness and correctness across datasets.
+
+```{r}
+anti_join(bakers_df,bakes_df)
+
+anti_join(bakers_df,results_df)
+
+anti_join(results_df,bakes_df)
+```
+
+### combination
+
+```{r}
+GBbakeoff_df = results_df |> 
+  left_join(bakes_df, by = c("series","baker","episode")) |> 
+  left_join(bakers_df, by = c("series","baker"))
+
+
+```
+
+
+In this section, the datasets were imported, and I reviewed the contents of each dataset. I noticed that the bakers' names in the baker.csv file were full names, whereas the other datasets only contained the bakers' first names. To ensure consistency across the datasets, I split the full names in baker.csv into separate columns for first and last names. After verifying the consistency between the first_name and last_name columns and the original baker_name colomn, I removed the baker_name variable to avoid redundant information. I then labeled the first_name as baker in this dataset, consistent with other datasets.Additionally, in the results.csv dataset, the first two rows contains non-data values, so they have been removed.
