--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -83,7 +83,7 @@ that serve the A train are ADA compliant.
 ``` r
 Mr_wheel = 
   read_excel("Data/202409 Trash Wheel Collection Data.xlsx", sheet = "Mr. Trash Wheel", 
-  col_types = c("numeric","text","text","date","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","skip","skip")) |> 
+  col_types = c("numeric","text","text","date","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","numeric","skip","skip"), skip = 1) |> 
   janitor::clean_names() |> 
   drop_na(dumpster) |> 
   mutate(
@@ -137,6 +137,18 @@ trash_wheel_df =
   bind_rows(Mr_wheel_com, Prof_wheel_com, Gwynnda_wheel_com) |> 
   janitor::clean_names() |> 
   relocate(trash_wheel_device)
+
+total_weight_trash_Prof = trash_wheel_df |> 
+  filter(trash_wheel_device == "Professor") |> 
+  drop_na(weight_tons) |> 
+  pull(weight_tons) |> 
+  sum()
+
+total_cigarette_Gwynnda = trash_wheel_df |> 
+  filter(trash_wheel_device == "Gwynnda", month == "June", year == 2022 ) |> 
+  drop_na(cigarette_butts) |> 
+  pull(cigarette_butts) |> 
+  sum()
 ```
 
 In section 3, the three sheets were combined. The combined dataset
@@ -152,7 +164,10 @@ the “trash_wheel_device” variable are essential indicators provide
 timely and effective access to critical and detailed information for
 each observation. Therefore, I relocated the “trash_wheel_device” to a
 forward position, specifically to the first column in the dataset, to
-facilitate easier information extraction.
+facilitate easier information extraction.Based on provided data, the
+total weight of trash collected by Professor Trash Wheel was 246.74
+tons, and the total number of cigarette butts collected by Gwynnda in
+June of 2022 was 1.812^{4}.
 
 # Problem 3 Great British Bake Off Dataset
 
@@ -162,27 +177,117 @@ facilitate easier information extraction.
 bakers_df =
   read_csv("data/gbb_datasets/bakers.csv", na = c("NA", "", ".", " ")) |> 
   janitor::clean_names() |> 
-  mutate(
-    first_name = word(baker_name, 1),
-    last_name = word(baker_name, -1)
-  ) |> 
-  relocate(first_name, last_name) |> 
-  select(-baker_name)
+  separate(baker_name, into = c("baker", "last_name"), sep = "")
+```
 
+    ## Warning: Expected 2 pieces. Additional pieces discarded in 120 rows [1, 2, 3, 4, 5, 6,
+    ## 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, ...].
+
+``` r
 bakes_df =
   read_csv("data/gbb_datasets/bakes.csv", na = c("NA", "", ".", " ")) |> 
-  janitor::clean_names()
+  janitor::clean_names() |> 
+  mutate(
+    series = as.numeric(series)
+  )
 
 results_df =
-  read_csv("data/gbb_datasets/results.csv", na = c("NA", "", ".", " ")) |> 
-  janitor::clean_names()
+  read_csv("data/gbb_datasets/results.csv", na = c("NA", "", ".", " "), skip = 2) |> 
+  janitor::clean_names() |> 
+  mutate(
+    result = case_match(
+      result,
+      "IN" ~ "stayed in",
+      "OUT" ~ "Eliminated", 
+      "STAR BAKER" ~ "Star Baker",
+      "WINNER" ~ "Series Winner",
+      "Runner-up" ~ "Series Runner up",
+      "WD" ~ "withdrew"
+    )
+  )
+```
+
+### check for completeness and correctness across datasets.
+
+``` r
+anti_join(bakers_df,bakes_df)
+```
+
+    ## Joining with `by = join_by(baker, series)`
+
+    ## # A tibble: 120 × 6
+    ##    baker last_name series baker_age baker_occupation             hometown       
+    ##    <chr> <chr>      <dbl>     <dbl> <chr>                        <chr>          
+    ##  1 ""    A              4        25 Charity worker               Saltley, Birmi…
+    ##  2 ""    A             10        28 Geography teacher            Essex          
+    ##  3 ""    A              6        37 Nurse                        Bracknell, Ber…
+    ##  4 ""    A             10        24 Fashion designer             Halifax        
+    ##  5 ""    A              7        25 Aerospace engineer           Derby / Holywo…
+    ##  6 ""    A              1        30 Midwife                      Essex          
+    ##  7 ""    A              9        30 Banker                       London         
+    ##  8 ""    B              4        31 Military Wives' Choir Singer Aldershot, Ham…
+    ##  9 ""    B              2        31 Graphic Designer             Northampton    
+    ## 10 ""    B              7        23 Teaching assistant           South London   
+    ## # ℹ 110 more rows
+
+``` r
+anti_join(bakers_df,results_df)
+```
+
+    ## Joining with `by = join_by(baker, series)`
+
+    ## # A tibble: 120 × 6
+    ##    baker last_name series baker_age baker_occupation             hometown       
+    ##    <chr> <chr>      <dbl>     <dbl> <chr>                        <chr>          
+    ##  1 ""    A              4        25 Charity worker               Saltley, Birmi…
+    ##  2 ""    A             10        28 Geography teacher            Essex          
+    ##  3 ""    A              6        37 Nurse                        Bracknell, Ber…
+    ##  4 ""    A             10        24 Fashion designer             Halifax        
+    ##  5 ""    A              7        25 Aerospace engineer           Derby / Holywo…
+    ##  6 ""    A              1        30 Midwife                      Essex          
+    ##  7 ""    A              9        30 Banker                       London         
+    ##  8 ""    B              4        31 Military Wives' Choir Singer Aldershot, Ham…
+    ##  9 ""    B              2        31 Graphic Designer             Northampton    
+    ## 10 ""    B              7        23 Teaching assistant           South London   
+    ## # ℹ 110 more rows
+
+``` r
+anti_join(results_df,bakes_df)
+```
+
+    ## Joining with `by = join_by(series, episode, baker)`
+
+    ## # A tibble: 596 × 5
+    ##    series episode baker    technical result
+    ##     <dbl>   <dbl> <chr>        <dbl> <chr> 
+    ##  1      1       2 Lea             NA <NA>  
+    ##  2      1       2 Mark            NA <NA>  
+    ##  3      1       3 Annetha         NA <NA>  
+    ##  4      1       3 Lea             NA <NA>  
+    ##  5      1       3 Louise          NA <NA>  
+    ##  6      1       3 Mark            NA <NA>  
+    ##  7      1       4 Annetha         NA <NA>  
+    ##  8      1       4 Jonathan        NA <NA>  
+    ##  9      1       4 Lea             NA <NA>  
+    ## 10      1       4 Louise          NA <NA>  
+    ## # ℹ 586 more rows
+
+### combination
+
+``` r
+GBbakeoff_df = results_df |> 
+  left_join(bakes_df, by = c("series","baker","episode")) |> 
+  left_join(bakers_df, by = c("series","baker"))
 ```
 
 In this section, the datasets were imported, and I reviewed the contents
 of each dataset. I noticed that the bakers’ names in the baker.csv file
 were full names, whereas the other datasets only contained the bakers’
 first names. To ensure consistency across the datasets, I split the full
-names in baker.csv into separate columns for first and last names. Then
-I removed the baker_name variable to avoid redundant information after
+names in baker.csv into separate columns for first and last names. After
 verifying the consistency between the first_name and last_name columns
-and the original baker_name colomn.
+and the original baker_name colomn, I removed the baker_name variable to
+avoid redundant information. I then labeled the first_name as baker in
+this dataset, consistent with other datasets.Additionally, in the
+results.csv dataset, the first two rows contains non-data values, so
+they have been removed.
