--- a/P8105 HW2.Rmd
+++ b/P8105 HW2.Rmd
@@ -50,17 +50,13 @@ ADA_compliant_station =
 
 Entry_without_vending = 
   NYCtransit_df |> 
-  filter(vending == "NO", entry == "TRUE") |> 
-  distinct(station_name,line)
-
-numEntry_without_vending = nrow(Entry_without_vending)
-numdistinct_station = nrow(distinct_station)
-
-prop_without_vending = numEntry_without_vending/numdistinct_station
+  filter(vending == "NO") |> 
+  pull(entry) |> 
+  mean()
 
 ```
 
-In this dataset, there are `r nrow(distinct_station)` distinct stations and `r nrow(ADA_compliant_station)` stations are ADA compliant. The proportion of station entrances / exits without vending allow entrance is `r prop_without_vending`.
+In this dataset, there are `r nrow(distinct_station)` distinct stations and `r nrow(ADA_compliant_station)` stations are ADA compliant. The proportion of station entrances / exits without vending allow entrance is `r Entry_without_vending`.
 
 
 ## Section 3
@@ -163,18 +159,17 @@ In section 3, the three sheets were combined. The combined dataset contains a to
 bakers_df =
   read_csv("data/gbb_datasets/bakers.csv", na = c("NA", "", ".", " ")) |> 
   janitor::clean_names() |> 
-  separate(baker_name, into = c("baker", "last_name"), sep = "")
+  separate(baker_name, into = c("baker_first_name", "last_name"), sep = "")
 
 bakes_df =
   read_csv("data/gbb_datasets/bakes.csv", na = c("NA", "", ".", " ")) |> 
   janitor::clean_names() |> 
-  mutate(
-    series = as.numeric(series)
-  )
+  rename(baker_first_name = baker)
 
 results_df =
   read_csv("data/gbb_datasets/results.csv", na = c("NA", "", ".", " "), skip = 2) |> 
   janitor::clean_names() |> 
+  rename(baker_first_name = baker) |> 
   mutate(
     result = case_match(
       result,
@@ -189,7 +184,7 @@ results_df =
 
 ```
 
-### check for completeness and correctness across datasets.
+### Check for completeness and correctness across datasets.
 
 ```{r}
 anti_join(bakers_df,bakes_df)
@@ -199,12 +194,14 @@ anti_join(bakers_df,results_df)
 anti_join(results_df,bakes_df)
 ```
 
-### combination
+### Combination
 
 ```{r}
 GBbakeoff_df = results_df |> 
-  left_join(bakes_df, by = c("series","baker","episode")) |> 
-  left_join(bakers_df, by = c("series","baker"))
+  left_join(bakes_df, by = c("series","baker_first_name","episode")) |> 
+  left_join(bakers_df, by = c("baker_first_name","series")) |> 
+  relocate(series, episode, baker_first_name,last_name)
+  
 
 
 ```
