--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -46,18 +46,14 @@ ADA_compliant_station =
 
 Entry_without_vending = 
   NYCtransit_df |> 
-  filter(vending == "NO", entry == "TRUE") |> 
-  distinct(station_name,line)
-
-numEntry_without_vending = nrow(Entry_without_vending)
-numdistinct_station = nrow(distinct_station)
-
-prop_without_vending = numEntry_without_vending/numdistinct_station
+  filter(vending == "NO") |> 
+  pull(entry) |> 
+  mean()
 ```
 
 In this dataset, there are 465 distinct stations and 84 stations are ADA
 compliant. The proportion of station entrances / exits without vending
-allow entrance is 0.0924731.
+allow entrance is 0.3770492.
 
 ## Section 3
 
@@ -177,7 +173,7 @@ June of 2022 was 1.812^{4}.
 bakers_df =
   read_csv("data/gbb_datasets/bakers.csv", na = c("NA", "", ".", " ")) |> 
   janitor::clean_names() |> 
-  separate(baker_name, into = c("baker", "last_name"), sep = "")
+  separate(baker_name, into = c("baker_first_name", "last_name"), sep = "")
 ```
 
     ## Warning: Expected 2 pieces. Additional pieces discarded in 120 rows [1, 2, 3, 4, 5, 6,
@@ -187,13 +183,12 @@ bakers_df =
 bakes_df =
   read_csv("data/gbb_datasets/bakes.csv", na = c("NA", "", ".", " ")) |> 
   janitor::clean_names() |> 
-  mutate(
-    series = as.numeric(series)
-  )
+  rename(baker_first_name = baker)
 
 results_df =
   read_csv("data/gbb_datasets/results.csv", na = c("NA", "", ".", " "), skip = 2) |> 
   janitor::clean_names() |> 
+  rename(baker_first_name = baker) |> 
   mutate(
     result = case_match(
       result,
@@ -207,77 +202,78 @@ results_df =
   )
 ```
 
-### check for completeness and correctness across datasets.
+### Check for completeness and correctness across datasets.
 
 ``` r
 anti_join(bakers_df,bakes_df)
 ```
 
-    ## Joining with `by = join_by(baker, series)`
+    ## Joining with `by = join_by(baker_first_name, series)`
 
     ## # A tibble: 120 × 6
-    ##    baker last_name series baker_age baker_occupation             hometown       
-    ##    <chr> <chr>      <dbl>     <dbl> <chr>                        <chr>          
-    ##  1 ""    A              4        25 Charity worker               Saltley, Birmi…
-    ##  2 ""    A             10        28 Geography teacher            Essex          
-    ##  3 ""    A              6        37 Nurse                        Bracknell, Ber…
-    ##  4 ""    A             10        24 Fashion designer             Halifax        
-    ##  5 ""    A              7        25 Aerospace engineer           Derby / Holywo…
-    ##  6 ""    A              1        30 Midwife                      Essex          
-    ##  7 ""    A              9        30 Banker                       London         
-    ##  8 ""    B              4        31 Military Wives' Choir Singer Aldershot, Ham…
-    ##  9 ""    B              2        31 Graphic Designer             Northampton    
-    ## 10 ""    B              7        23 Teaching assistant           South London   
+    ##    baker_first_name last_name series baker_age baker_occupation         hometown
+    ##    <chr>            <chr>      <dbl>     <dbl> <chr>                    <chr>   
+    ##  1 ""               A              4        25 Charity worker           Saltley…
+    ##  2 ""               A             10        28 Geography teacher        Essex   
+    ##  3 ""               A              6        37 Nurse                    Brackne…
+    ##  4 ""               A             10        24 Fashion designer         Halifax 
+    ##  5 ""               A              7        25 Aerospace engineer       Derby /…
+    ##  6 ""               A              1        30 Midwife                  Essex   
+    ##  7 ""               A              9        30 Banker                   London  
+    ##  8 ""               B              4        31 Military Wives' Choir S… Aldersh…
+    ##  9 ""               B              2        31 Graphic Designer         Northam…
+    ## 10 ""               B              7        23 Teaching assistant       South L…
     ## # ℹ 110 more rows
 
 ``` r
 anti_join(bakers_df,results_df)
 ```
 
-    ## Joining with `by = join_by(baker, series)`
+    ## Joining with `by = join_by(baker_first_name, series)`
 
     ## # A tibble: 120 × 6
-    ##    baker last_name series baker_age baker_occupation             hometown       
-    ##    <chr> <chr>      <dbl>     <dbl> <chr>                        <chr>          
-    ##  1 ""    A              4        25 Charity worker               Saltley, Birmi…
-    ##  2 ""    A             10        28 Geography teacher            Essex          
-    ##  3 ""    A              6        37 Nurse                        Bracknell, Ber…
-    ##  4 ""    A             10        24 Fashion designer             Halifax        
-    ##  5 ""    A              7        25 Aerospace engineer           Derby / Holywo…
-    ##  6 ""    A              1        30 Midwife                      Essex          
-    ##  7 ""    A              9        30 Banker                       London         
-    ##  8 ""    B              4        31 Military Wives' Choir Singer Aldershot, Ham…
-    ##  9 ""    B              2        31 Graphic Designer             Northampton    
-    ## 10 ""    B              7        23 Teaching assistant           South London   
+    ##    baker_first_name last_name series baker_age baker_occupation         hometown
+    ##    <chr>            <chr>      <dbl>     <dbl> <chr>                    <chr>   
+    ##  1 ""               A              4        25 Charity worker           Saltley…
+    ##  2 ""               A             10        28 Geography teacher        Essex   
+    ##  3 ""               A              6        37 Nurse                    Brackne…
+    ##  4 ""               A             10        24 Fashion designer         Halifax 
+    ##  5 ""               A              7        25 Aerospace engineer       Derby /…
+    ##  6 ""               A              1        30 Midwife                  Essex   
+    ##  7 ""               A              9        30 Banker                   London  
+    ##  8 ""               B              4        31 Military Wives' Choir S… Aldersh…
+    ##  9 ""               B              2        31 Graphic Designer         Northam…
+    ## 10 ""               B              7        23 Teaching assistant       South L…
     ## # ℹ 110 more rows
 
 ``` r
 anti_join(results_df,bakes_df)
 ```
 
-    ## Joining with `by = join_by(series, episode, baker)`
+    ## Joining with `by = join_by(series, episode, baker_first_name)`
 
     ## # A tibble: 596 × 5
-    ##    series episode baker    technical result
-    ##     <dbl>   <dbl> <chr>        <dbl> <chr> 
-    ##  1      1       2 Lea             NA <NA>  
-    ##  2      1       2 Mark            NA <NA>  
-    ##  3      1       3 Annetha         NA <NA>  
-    ##  4      1       3 Lea             NA <NA>  
-    ##  5      1       3 Louise          NA <NA>  
-    ##  6      1       3 Mark            NA <NA>  
-    ##  7      1       4 Annetha         NA <NA>  
-    ##  8      1       4 Jonathan        NA <NA>  
-    ##  9      1       4 Lea             NA <NA>  
-    ## 10      1       4 Louise          NA <NA>  
+    ##    series episode baker_first_name technical result
+    ##     <dbl>   <dbl> <chr>                <dbl> <chr> 
+    ##  1      1       2 Lea                     NA <NA>  
+    ##  2      1       2 Mark                    NA <NA>  
+    ##  3      1       3 Annetha                 NA <NA>  
+    ##  4      1       3 Lea                     NA <NA>  
+    ##  5      1       3 Louise                  NA <NA>  
+    ##  6      1       3 Mark                    NA <NA>  
+    ##  7      1       4 Annetha                 NA <NA>  
+    ##  8      1       4 Jonathan                NA <NA>  
+    ##  9      1       4 Lea                     NA <NA>  
+    ## 10      1       4 Louise                  NA <NA>  
     ## # ℹ 586 more rows
 
-### combination
+### Combination
 
 ``` r
 GBbakeoff_df = results_df |> 
-  left_join(bakes_df, by = c("series","baker","episode")) |> 
-  left_join(bakers_df, by = c("series","baker"))
+  left_join(bakes_df, by = c("series","baker_first_name","episode")) |> 
+  left_join(bakers_df, by = c("baker_first_name","series")) |> 
+  relocate(series, episode, baker_first_name,last_name)
 ```
 
 In this section, the datasets were imported, and I reviewed the contents
