--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -91,6 +91,7 @@ In section 1, the original dataset was imported, and the “Mr. Trash
 Wheel” sheet was selected. After examining the content of the original
 excel dataset, I identified columns labeled “x15” and “x16” as non-data
 columns containing only NAs. Therefore, these two columns were removed.
+The first row, which contained figure but not actual data, was removed.
 Additionally, any rows that did not correspond to a specific dumpster
 were filtered out from the dataset. Lastly, the values in the
 “sports_balls” column were rounded to nearest integer and converted to
@@ -173,13 +174,12 @@ June of 2022 was 1.812^{4}.
 bakers_df =
   read_csv("data/gbb_datasets/bakers.csv", na = c("NA", "", ".", " ")) |> 
   janitor::clean_names() |> 
-  separate(baker_name, into = c("baker_first_name", "last_name"), sep = "")
-```
+  mutate(
+    baker_first_name = word(baker_name, 1),
+    baker_last_name = word(baker_name, -1)
+  ) |> 
+  select(-baker_name)
 
-    ## Warning: Expected 2 pieces. Additional pieces discarded in 120 rows [1, 2, 3, 4, 5, 6,
-    ## 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, ...].
-
-``` r
 bakes_df =
   read_csv("data/gbb_datasets/bakes.csv", na = c("NA", "", ".", " ")) |> 
   janitor::clean_names() |> 
@@ -202,49 +202,53 @@ results_df =
   )
 ```
 
-### Check for completeness and correctness across datasets.
+In this section, the datasets were imported, and I reviewed the contents
+of each dataset. I noticed that the bakers’ names in the baker.csv file
+were full names, whereas the other datasets only contained the bakers’
+first names. To ensure consistency across the datasets, I split the full
+names in baker.csv into separate columns as baker_first_name and
+baker_last_names. After verifying the consistency between the first_name
+and last_name columns and the original baker_name colomn, I removed the
+baker_name variable to avoid redundant information. I then labeled the
+baker as baker_first_name in all datasets, ensuring consistency.
+Additionally, in the results.csv dataset, the first two rows contains
+non-data values, so they have been removed.The values of result column
+in the results.csv were converted into more descriptive phrases, which
+is useful for readability and interpretation.
+
+## Section 2: Check for completeness and correctness across datasets.
 
 ``` r
 anti_join(bakers_df,bakes_df)
 ```
 
-    ## Joining with `by = join_by(baker_first_name, series)`
+    ## Joining with `by = join_by(series, baker_first_name)`
 
-    ## # A tibble: 120 × 6
-    ##    baker_first_name last_name series baker_age baker_occupation         hometown
-    ##    <chr>            <chr>      <dbl>     <dbl> <chr>                    <chr>   
-    ##  1 ""               A              4        25 Charity worker           Saltley…
-    ##  2 ""               A             10        28 Geography teacher        Essex   
-    ##  3 ""               A              6        37 Nurse                    Brackne…
-    ##  4 ""               A             10        24 Fashion designer         Halifax 
-    ##  5 ""               A              7        25 Aerospace engineer       Derby /…
-    ##  6 ""               A              1        30 Midwife                  Essex   
-    ##  7 ""               A              9        30 Banker                   London  
-    ##  8 ""               B              4        31 Military Wives' Choir S… Aldersh…
-    ##  9 ""               B              2        31 Graphic Designer         Northam…
-    ## 10 ""               B              7        23 Teaching assistant       South L…
-    ## # ℹ 110 more rows
+    ## # A tibble: 26 × 6
+    ##    series baker_age baker_occupation   hometown baker_first_name baker_last_name
+    ##     <dbl>     <dbl> <chr>              <chr>    <chr>            <chr>          
+    ##  1     10        28 Geography teacher  Essex    Alice            Fevronia       
+    ##  2     10        24 Fashion designer   Halifax  Amelia           LeBruin        
+    ##  3      9        30 Banker             London   Antony           Amourdoux      
+    ##  4      9        33 Full-time parent   Bristol  Briony           Williams       
+    ##  5      9        36 Full-time parent   London   Dan              Beasley-Harling
+    ##  6     10        32 Support worker     Rotherh… Dan              Chambers       
+    ##  7     10        36 International hea… Whitby   David            Atherton       
+    ##  8     10        40 Online project ma… Leeds    Helena           Garcia         
+    ##  9     10        20 Student            Durham   Henry            Bird           
+    ## 10      9        33 Countryside recre… County … Imelda           McCarron       
+    ## # ℹ 16 more rows
 
 ``` r
 anti_join(bakers_df,results_df)
 ```
 
-    ## Joining with `by = join_by(baker_first_name, series)`
+    ## Joining with `by = join_by(series, baker_first_name)`
 
-    ## # A tibble: 120 × 6
-    ##    baker_first_name last_name series baker_age baker_occupation         hometown
-    ##    <chr>            <chr>      <dbl>     <dbl> <chr>                    <chr>   
-    ##  1 ""               A              4        25 Charity worker           Saltley…
-    ##  2 ""               A             10        28 Geography teacher        Essex   
-    ##  3 ""               A              6        37 Nurse                    Brackne…
-    ##  4 ""               A             10        24 Fashion designer         Halifax 
-    ##  5 ""               A              7        25 Aerospace engineer       Derby /…
-    ##  6 ""               A              1        30 Midwife                  Essex   
-    ##  7 ""               A              9        30 Banker                   London  
-    ##  8 ""               B              4        31 Military Wives' Choir S… Aldersh…
-    ##  9 ""               B              2        31 Graphic Designer         Northam…
-    ## 10 ""               B              7        23 Teaching assistant       South L…
-    ## # ℹ 110 more rows
+    ## # A tibble: 1 × 6
+    ##   series baker_age baker_occupation hometown    baker_first_name baker_last_name
+    ##    <dbl>     <dbl> <chr>            <chr>       <chr>            <chr>          
+    ## 1      2        41 Housewife        Ongar, Ess… Jo               Wheatley
 
 ``` r
 anti_join(results_df,bakes_df)
@@ -267,23 +271,11 @@ anti_join(results_df,bakes_df)
     ## 10      1       4 Louise                  NA <NA>  
     ## # ℹ 586 more rows
 
-### Combination
+## Section 3: Combination
 
 ``` r
 GBbakeoff_df = results_df |> 
   left_join(bakes_df, by = c("series","baker_first_name","episode")) |> 
   left_join(bakers_df, by = c("baker_first_name","series")) |> 
-  relocate(series, episode, baker_first_name,last_name)
+  relocate(series, episode, baker_first_name, baker_last_name, baker_age, baker_occupation, hometown, technical, result,signature_bake, show_stopper)
 ```
-
-In this section, the datasets were imported, and I reviewed the contents
-of each dataset. I noticed that the bakers’ names in the baker.csv file
-were full names, whereas the other datasets only contained the bakers’
-first names. To ensure consistency across the datasets, I split the full
-names in baker.csv into separate columns for first and last names. After
-verifying the consistency between the first_name and last_name columns
-and the original baker_name colomn, I removed the baker_name variable to
-avoid redundant information. I then labeled the first_name as baker in
-this dataset, consistent with other datasets.Additionally, in the
-results.csv dataset, the first two rows contains non-data values, so
-they have been removed.
