--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -271,7 +271,7 @@ anti_join(results_df,bakes_df)
     ## 10      1       4 Louise                  NA <NA>  
     ## # ℹ 586 more rows
 
-## Section 3: Combination
+## Section 3: Combining and organizing data into a meaningful structure
 
 ``` r
 GBbakeoff_df = results_df |> 
@@ -279,3 +279,11 @@ GBbakeoff_df = results_df |>
   left_join(bakers_df, by = c("baker_first_name","series")) |> 
   relocate(series, episode, baker_first_name, baker_last_name, baker_age, baker_occupation, hometown, technical, result,signature_bake, show_stopper)
 ```
+
+Exporting the final dataset as a CSV:
+
+``` r
+write_csv(GBbakeoff_df,"data/GBbakeoff_df.csv")
+```
+
+## Section 4:
