--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -286,4 +286,1134 @@ Exporting the final dataset as a CSV:
 write_csv(GBbakeoff_df,"data/GBbakeoff_df.csv")
 ```
 
-## Section 4:
+## Section 4: Table Creation
+
+``` r
+Star_win_df = 
+  GBbakeoff_df |> 
+  filter(series>=5 & series<=10, result == c("Star Baker","Series Winner")) |> 
+  select(series, episode, baker_first_name, baker_last_name, baker_age, result, baker_occupation, hometown, technical,signature_bake, show_stopper)
+
+knitr::kable(
+  Star_win_df,format = "html",
+  caption = "Table of Star baker/Winner of each episode in Seasons 5 through 10 "
+  )
+```
+
+<table>
+<caption>
+Table of Star baker/Winner of each episode in Seasons 5 through 10
+</caption>
+<thead>
+<tr>
+<th style="text-align:right;">
+series
+</th>
+<th style="text-align:right;">
+episode
+</th>
+<th style="text-align:left;">
+baker_first_name
+</th>
+<th style="text-align:left;">
+baker_last_name
+</th>
+<th style="text-align:right;">
+baker_age
+</th>
+<th style="text-align:left;">
+result
+</th>
+<th style="text-align:left;">
+baker_occupation
+</th>
+<th style="text-align:left;">
+hometown
+</th>
+<th style="text-align:right;">
+technical
+</th>
+<th style="text-align:left;">
+signature_bake
+</th>
+<th style="text-align:left;">
+show_stopper
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Richard
+</td>
+<td style="text-align:left;">
+Burr
+</td>
+<td style="text-align:right;">
+38
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Builder
+</td>
+<td style="text-align:left;">
+Mill Hill, London
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Rosemary Seeded Crackers
+</td>
+<td style="text-align:left;">
+Pirates!
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Richard
+</td>
+<td style="text-align:left;">
+Burr
+</td>
+<td style="text-align:right;">
+38
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Builder
+</td>
+<td style="text-align:left;">
+Mill Hill, London
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+Black Forest Chocolate Fondants
+</td>
+<td style="text-align:left;">
+Tiramisu Baked Alaska
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+Kate
+</td>
+<td style="text-align:left;">
+Henry
+</td>
+<td style="text-align:right;">
+41
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Furniture Restorer
+</td>
+<td style="text-align:left;">
+Brighton, East Sussex
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Rhubarb and Custard Tart
+</td>
+<td style="text-align:left;">
+Rhubarb, Prune and Apple Pies
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+Chetna
+</td>
+<td style="text-align:left;">
+Makan
+</td>
+<td style="text-align:right;">
+35
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Fashion Designer
+</td>
+<td style="text-align:left;">
+Broadstairs, Kent
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Orange Savarin with Cinnamon Cream
+</td>
+<td style="text-align:left;">
+Almond Liqueur Dobos Torte with Chocolate Caramel Buttercream
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:left;">
+Richard
+</td>
+<td style="text-align:left;">
+Burr
+</td>
+<td style="text-align:right;">
+38
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Builder
+</td>
+<td style="text-align:left;">
+Mill Hill, London
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Minted Lamb Pasties
+</td>
+<td style="text-align:left;">
+Stair of Éclairs (Lavender and Blueberry & Rose and Raspberry Éclairs)
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:left;">
+Richard
+</td>
+<td style="text-align:left;">
+Burr
+</td>
+<td style="text-align:right;">
+38
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Builder
+</td>
+<td style="text-align:left;">
+Mill Hill, London
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Rose and Pistachio BaklavaWalnut and Almond Baklava
+</td>
+<td style="text-align:left;">
+Hazelnut Mocha EntremetsPink Grapefruit Entremets
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:left;">
+Nancy
+</td>
+<td style="text-align:left;">
+Birtwhistle
+</td>
+<td style="text-align:right;">
+60
+</td>
+<td style="text-align:left;">
+Series Winner
+</td>
+<td style="text-align:left;">
+Retired Practice Manager
+</td>
+<td style="text-align:left;">
+Barton-upon-Humber, Lincolnshire
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Apple and Lemon KitesRaspberry and Almond Croissants
+</td>
+<td style="text-align:left;">
+Red Windmill
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Ian
+</td>
+<td style="text-align:left;">
+Cumming
+</td>
+<td style="text-align:right;">
+41
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Travel photographer
+</td>
+<td style="text-align:left;">
+Great Wilbraham, Cambridgeshire
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Orange, Rosemary and Almond Biscotti
+</td>
+<td style="text-align:left;">
+Sandwich de la Confiture
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Ian
+</td>
+<td style="text-align:left;">
+Cumming
+</td>
+<td style="text-align:right;">
+41
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Travel photographer
+</td>
+<td style="text-align:left;">
+Great Wilbraham, Cambridgeshire
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Pomegranate Two Ways Crème Brûlées
+</td>
+<td style="text-align:left;">
+Trio of Spicy and Herby Baked Cheesecakes
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+Mat
+</td>
+<td style="text-align:left;">
+Riley
+</td>
+<td style="text-align:right;">
+37
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Fire fighter
+</td>
+<td style="text-align:left;">
+London
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Piña Colada Frangipane Tart
+</td>
+<td style="text-align:left;">
+His ‘n’ Hers Vol-au-vents
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:left;">
+Nadiya
+</td>
+<td style="text-align:left;">
+Hussain
+</td>
+<td style="text-align:right;">
+30
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Full-time mother
+</td>
+<td style="text-align:left;">
+Leeds / Luton
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Rose Pistachio and Mocha Hazelnut Horns
+</td>
+<td style="text-align:left;">
+Bubble Gum and Peppermint Cream Religieuse à l’ancienne
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Candice
+</td>
+<td style="text-align:left;">
+Brown
+</td>
+<td style="text-align:right;">
+31
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+PE teacher
+</td>
+<td style="text-align:left;">
+Barton-Le-Clay, Bedfordshire
+</td>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:left;">
+Salted Caramel, Chocolate Iced Shiny Hearts
+</td>
+<td style="text-align:left;">
+Gingerbread Pub with Sticky Ginger Carpet
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Benjamina
+</td>
+<td style="text-align:left;">
+Ebuehi
+</td>
+<td style="text-align:right;">
+23
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Teaching assistant
+</td>
+<td style="text-align:left;">
+South London
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Red Onion Chutney, Brie and Bacon Yorkshire Puddings
+</td>
+<td style="text-align:left;">
+Tropical Churros
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+Tom
+</td>
+<td style="text-align:left;">
+Gilliford
+</td>
+<td style="text-align:right;">
+26
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Project engagement manager
+</td>
+<td style="text-align:left;">
+Rochdale
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Blood Orange Halloween Pumpkin Pie
+</td>
+<td style="text-align:left;">
+Floral Tea Cake
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:left;">
+Candice
+</td>
+<td style="text-align:left;">
+Brown
+</td>
+<td style="text-align:right;">
+31
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+PE teacher
+</td>
+<td style="text-align:left;">
+Barton-Le-Clay, Bedfordshire
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Cheesy Cheeky Fish Pies
+</td>
+<td style="text-align:left;">
+Peacock
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Steven
+</td>
+<td style="text-align:left;">
+Carter-Bailey
+</td>
+<td style="text-align:right;">
+34
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Marketer
+</td>
+<td style="text-align:left;">
+Watford, Hertfordshire
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+Amarpressi Biscuits
+</td>
+<td style="text-align:left;">
+‘Check Bake’ Game
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Kate
+</td>
+<td style="text-align:left;">
+Lyon
+</td>
+<td style="text-align:right;">
+29
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Health and safety inspector
+</td>
+<td style="text-align:left;">
+Merseyside
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+Salted Bay Caramel Millionaire Shortbreads
+</td>
+<td style="text-align:left;">
+Sticky Toffee Apple Caramel Cake
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+Liam
+</td>
+<td style="text-align:left;">
+Charles
+</td>
+<td style="text-align:right;">
+19
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Student
+</td>
+<td style="text-align:left;">
+North London
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+‘Standard FC’ Decorative Pies
+</td>
+<td style="text-align:left;">
+‘Nan’s Sunday Dinner’ Pie
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:left;">
+Stacey
+</td>
+<td style="text-align:left;">
+Hart
+</td>
+<td style="text-align:right;">
+42
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Former school teacher
+</td>
+<td style="text-align:left;">
+Radlett, Hertfordshire
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Camembert & Onion and Apple & Blueberry Bedfordshire Clangers
+</td>
+<td style="text-align:left;">
+‘Bright’ Lemon & Orange Savoy Cake
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Rahul
+</td>
+<td style="text-align:left;">
+Mandal
+</td>
+<td style="text-align:right;">
+30
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Research scientist
+</td>
+<td style="text-align:left;">
+Rotherham
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Dan
+</td>
+<td style="text-align:left;">
+Beasley-Harling
+</td>
+<td style="text-align:right;">
+36
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Full-time parent
+</td>
+<td style="text-align:left;">
+London
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+Kim-Joy
+</td>
+<td style="text-align:left;">
+Hewlett
+</td>
+<td style="text-align:right;">
+27
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Mental health specialist
+</td>
+<td style="text-align:left;">
+Leeds
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+Briony
+</td>
+<td style="text-align:left;">
+Williams
+</td>
+<td style="text-align:right;">
+33
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Full-time parent
+</td>
+<td style="text-align:left;">
+Bristol
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:left;">
+Ruby
+</td>
+<td style="text-align:left;">
+Bhogal
+</td>
+<td style="text-align:right;">
+29
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Project manager
+</td>
+<td style="text-align:left;">
+London
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Michelle
+</td>
+<td style="text-align:left;">
+Evans-Fecci
+</td>
+<td style="text-align:right;">
+35
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Print shop administrator
+</td>
+<td style="text-align:left;">
+Tenby, Wales
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Alice
+</td>
+<td style="text-align:left;">
+Fevronia
+</td>
+<td style="text-align:right;">
+28
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Geography teacher
+</td>
+<td style="text-align:left;">
+Essex
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Michael
+</td>
+<td style="text-align:left;">
+Chakraverty
+</td>
+<td style="text-align:right;">
+26
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Theatre manager/fitness instructor
+</td>
+<td style="text-align:left;">
+Stratford-upon-Avon
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Steph
+</td>
+<td style="text-align:left;">
+Blackwell
+</td>
+<td style="text-align:right;">
+28
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Shop assistant
+</td>
+<td style="text-align:left;">
+Chester
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+Steph
+</td>
+<td style="text-align:left;">
+Blackwell
+</td>
+<td style="text-align:right;">
+28
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Shop assistant
+</td>
+<td style="text-align:left;">
+Chester
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:left;">
+David
+</td>
+<td style="text-align:left;">
+Atherton
+</td>
+<td style="text-align:right;">
+36
+</td>
+<td style="text-align:left;">
+Series Winner
+</td>
+<td style="text-align:left;">
+International health adviser
+</td>
+<td style="text-align:left;">
+Whitby
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+</tbody>
+</table>
+
+In this section, the question asks about the star baker/winner of each
+episode in Seasons 5 through 10. I filtered out these persons and formed
+a reader-friendly table. The key information, such as the which series
+and episode the star baker/winner attend and results for illustrating
+they were either star baker or winner, were placed in front. Other
+personally relevant information of each participant was placed
+afterwards.
+
+According to the table, the first thing I noticed is that Richard Burr
+earned “Star Baker” title in four episodes of Series 5. However, Nancy
+Birtwhistle was the “Series Winner” for that series. Similarly, in
+Series 6, Ian Cumming won “Star Backer” in two episodes, and Candice
+Brown did the same in Series 7. In Series 9, there were five different
+“Star Bakers” which is one more than in the other series. In Series 10,
+Steph Balckwell earned two “Star baker” title in two episodes, yet David
+Atherton was the “Series winner”. Interestingly, there is no “Series
+Winner” recored for Series 6, 7, 8, and 9.In conclusion, based on the
+patterns observed in this table, it is clear that there were no any
+predictable overall winners. What stands out the most is that
+multiple_time “Star Bakers” do not always end up with winning the
+series, which goes againt what many people might expect. This makes the
+outcome of each series more surprising and unpredictable.
