--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -5,7 +5,7 @@ Name: Xi Peng UNI: xp2213 Date: 10.02.2024
 
 # Problem 1 NYC Transit Data
 
-## Section 1: Data Import
+## Section 1: Data import and cleaning
 
 ``` r
 NYCtransit_df =
@@ -33,7 +33,7 @@ entrance_type, ada. The variable “entry” also converted to logical.
 After the cleaning step, the tidy dataset contains 1868 rows and 9
 columns.
 
-## Section 2
+## Section 2: Distinct stations and ADA compliant Status
 
 ``` r
 distinct_station =
@@ -55,7 +55,7 @@ In this dataset, there are 465 distinct stations and 84 stations are ADA
 compliant. The proportion of station entrances / exits without vending
 allow entrance is 0.3770492.
 
-## Section 3
+## Section 3: Distinct station serving the A train and ADA compliance status
 
 ``` r
 station_served_A = NYCtransit_df |> 
@@ -74,7 +74,7 @@ that serve the A train are ADA compliant.
 
 # Problem 2 Trash Wheel Dataset
 
-## Section 1: Data Import & Cleaning of the “Mr. Trash Wheel” Sheet
+## Section 1: Data import & cleaning of the “Mr. Trash Wheel” Sheet
 
 ``` r
 Mr_wheel = 
@@ -97,7 +97,7 @@ were filtered out from the dataset. Lastly, the values in the
 “sports_balls” column were rounded to nearest integer and converted to
 integer variable.
 
-## Section 2: Cleaning of the “Professor Trash Wheel” Sheet and “Gwynnda Trash Wheel” Sheet
+## Section 2: Cleaning of the “Professor Trash Wheel” sheet and “Gwynnda Trash Wheel” sheet
 
 ``` r
 Prof_wheel = 
@@ -168,7 +168,7 @@ June of 2022 was 1.812^{4}.
 
 # Problem 3 Great British Bake Off Dataset
 
-## Section 1: Data import and Creation of a single, well-organized dataset
+## Section 1: Data import of bakers.csv, bakes.csv, and results.csv, and creation of a single, well-organized dataset
 
 ``` r
 bakers_df =
@@ -286,7 +286,7 @@ Exporting the final dataset as a CSV:
 write_csv(GBbakeoff_df,"data/GBbakeoff_df.csv")
 ```
 
-## Section 4: Table Creation
+## Section 4: Table creation for Star baker/Winner of each episode in Seasons 5 through 10
 
 ``` r
 Star_win_df = 
@@ -1417,3 +1417,44 @@ predictable overall winners. What stands out the most is that
 multiple_time “Star Bakers” do not always end up with winning the
 series, which goes againt what many people might expect. This makes the
 outcome of each series more surprising and unpredictable.
+
+## Section 5: Dataset exploration of viewers.csv
+
+``` r
+viewers_df =
+  read_csv("data/gbb_datasets/viewers.csv", na = c("NA", "", ".", " ")) |> 
+  janitor::clean_names()
+```
+
+The first 10 rows of this dataset:
+
+``` r
+head(viewers_df,10)
+```
+
+    ## # A tibble: 10 × 11
+    ##    episode series_1 series_2 series_3 series_4 series_5 series_6 series_7
+    ##      <dbl>    <dbl>    <dbl>    <dbl>    <dbl>    <dbl>    <dbl>    <dbl>
+    ##  1       1     2.24     3.1      3.85     6.6      8.51     11.6     13.6
+    ##  2       2     3        3.53     4.6      6.65     8.79     11.6     13.4
+    ##  3       3     3        3.82     4.53     7.17     9.28     12.0     13.0
+    ##  4       4     2.6      3.6      4.71     6.82    10.2      12.4     13.3
+    ##  5       5     3.03     3.83     4.61     6.95     9.95     12.4     13.1
+    ##  6       6     2.75     4.25     4.82     7.32    10.1      12       13.1
+    ##  7       7    NA        4.42     5.1      7.76    10.3      12.4     13.4
+    ##  8       8    NA        5.06     5.35     7.41     9.02     11.1     13.3
+    ##  9       9    NA       NA        5.7      7.41    10.7      12.6     13.4
+    ## 10      10    NA       NA        6.74     9.45    13.5      15.0     15.9
+    ## # ℹ 3 more variables: series_8 <dbl>, series_9 <dbl>, series_10 <dbl>
+
+``` r
+Ave_viewership1 = mean(pull(viewers_df,series_1), na.rm = TRUE)
+  
+Ave_viewership5 = mean(pull(viewers_df,series_5))
+```
+
+By checking the original imported dataset, I found there are missing
+values (NAs) for series_1 whereas series_5 contains no missing value.
+
+The average viewership for Season 1 was 2.77, and for Season 5 was
+10.0393.
